--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,6 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
-
 dependencies:
   flutter:
     sdk: flutter
@@ -28,6 +27,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg: ^0.19.1
 
 dev_dependencies:
   flutter_test:
@@ -42,10 +42,10 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  uses-material-design: true
+   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
+   assets:
     - assets/images/
     - assets/icons/
 
