--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.19.1
   provider: ^4.3.1
+  intl: 0.15.7
 
 dev_dependencies:
   flutter_test:
